HBASE-877 HCM is unable to find table with multiple regions which contains binary
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hbase/branches/0.2@693910 13f79535-47bb-0310-9956-ffa450edef68